# AI-AgTech-Hackathon-T5

./: .gitignore  CLAUDE.md  GlassesNotes.xcconfig  IMPLEMENTATION_SUMMARY.md  Info.plist  PLAN.md  README.md  TESTING.md  diagnose_openai.sh  test_openai.md  testing_llm.md
services/analysis/: .env  .env.example  README.md  build_session.py  categorize_results.py  convert_heic.py  generate_notes.py  pyproject.toml
services/analysis/analysis/: __init__.py  __main__.py  cli.py  csv_loader.py  gemini_client.py  models.py  service.py
services/analysis/analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
services/analysis/my_session/: data_samples_5.json  data_samples_5_compressed.json  images.csv  poultry_raw_notes_10_rows_llm_ready.csv
services/analysis/results/: poultry_raw_notes_10_rows_categorized.json  poultry_raw_notes_10_rows_llm_ready.json
services/analysis/tests/: IMG_4419.HEIC  IMG_4424.HEIC  IMG_4425.HEIC  IMG_4427.HEIC  IMG_4428.HEIC  poultry_raw_notes_10_rows_llm_ready.csv  test_smoke.py
services/categorization/: .env.example  README.md  SERVICES.md  pyproject.toml  taxonomy.db
services/categorization/categorization/: __init__.py  __main__.py  cli.py  gemini_client.py  models.py  normalize.py  service.py  taxonomy.py
services/categorization/categorization.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
services/categorization/tests/: test_smoke.py
services/categorization/tests/fixtures/: gen_sample_session.py
services/categorization/tests/fixtures/sample_session/: 11111111-0001-0001-0001-000000000001.json  (+9 more)
(+42 files in other folders)
