[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "categorization"
version = "0.1.0"
description = "Agriculture-aware observation categorizer for FarmNote, backed by Google Gemini."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "FarmNote Team" }]
dependencies = [
    "google-genai>=1.0",
    "pydantic>=2.6",
    "rapidfuzz>=3.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
categorization = "categorization.cli:main"

[tool.setuptools.packages.find]
include = ["categorization*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
